--- a/python-veracode-security-scanning.yml
+++ b/python-veracode-security-scanning.yml
@@ -17,7 +17,7 @@ jobs:
          fetch-depth: 0
      - uses: actions/setup-python@v3
        with:
-         python-version: '3.6'
+         python-version: '<python-version>'
          cache: 'pip'
      - name: pip install
        run: pip install -r requirements.txt
@@ -36,10 +36,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ Build ]
     steps:
-    - name: Set up JDK 11.0.12
+    - name: Set up JDK <java-version>
       uses: actions/setup-java@v1
       with:
-       java-version: 11.0.12
+       java-version: <java-version>
        
     - name: Download a single artifact
       uses: actions/download-artifact@v2
