--- a/javascript-veracode-security-scanning.yml
+++ b/javascript-veracode-security-scanning.yml
@@ -17,7 +17,7 @@ jobs:
          fetch-depth: 0
      - uses: actions/setup-node@v2
        with:
-         node-version: '14.16'
+         node-version: '<node-version>'
          cache: 'npm'
      - name: npm install
        run: 
@@ -37,10 +37,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ Build ]
     steps:
-    - name: Set up JDK 11.0.12
+    - name: Set up JDK <java-version>
       uses: actions/setup-java@v1
       with:
-       java-version: 11.0.12
+       java-version: <java-version>
        
     - name: Download a single artifact
       uses: actions/download-artifact@v2
