--- a/java-gradle-veracode-security-scanning.yml
+++ b/java-gradle-veracode-security-scanning.yml
@@ -11,10 +11,10 @@ jobs:
  Build:
     runs-on: ubuntu-latest
     steps:
-     - name: Set up JDK 11.0.12
+     - name: Set up JDK <java-version>
        uses: actions/setup-java@v1
        with:
-        java-version: 11.0.12
+        java-version: <java-version>
     
      - uses: actions/checkout@v2
        with:
@@ -34,10 +34,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ Build ]
     steps:
-    - name: Set up JDK 11.0.12
+    - name: Set up JDK <java-version>
       uses: actions/setup-java@v1
       with:
-       java-version: 11.0.12
+       java-version: <java-version>
        
     - name: Download a single artifact
       uses: actions/download-artifact@v2
