--- a/java-maven-veracode-security-scanning.yml
+++ b/java-maven-veracode-security-scanning.yml
@@ -22,7 +22,7 @@ jobs:
          fetch-depth: 0
      - shell: bash
        run: |
-       # if setting.xml, m2 and JFRO is involved
+       # if setting.xml, m2 and JFROG is involved
        # use the following with relevant secrets
        # cp settings.xml ~/.m2/settings.xml
        # mvn clean install -DskipTests -DjfServer=${{ secrets.JFROG_Server }} -DjfUsername=${{ secrets.JFROG_USERNAME }} -DjfPassword=${{ secrets.JFROG_PASSWORD }}
