--- a/java-maven-veracode-security-scanning.yml
+++ b/java-maven-veracode-security-scanning.yml
@@ -56,7 +56,7 @@ jobs:
     - shell: bash
       run: |
        java -Dpipeline.debug=false -jar pipeline-scan.jar --veracode_api_id "${{secrets.VID}}" --veracode_api_key "${{secrets.VKEY}}" --file "<binary_name>.jar" --fail_on_severity="Very High, High"
-    # if you want make -Dpipeline.debug=true
+     # if you may change -Dpipeline.debug=true
     
  Veracode-SAST-Upload-Scan:
   runs-on: ubuntu-latest
